--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: 🛠️ Build project
-        run: npm run build
+       - run: npx vite build
 
       - name: 🔧 Install rclone
         run: curl https://rclone.org/install.sh | sudo bash
