--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,22 +16,13 @@ jobs:
       - name: 📦 Install dependencies
         run: npm install
 
-      - name: 🛠️ Build project
-       - run: npx vite build
+      - name: 🛠 Build project
+        run: npx vite build
 
-      - name: 🔧 Install rclone
+      - name: 📥 Install rclone
         run: curl https://rclone.org/install.sh | sudo bash
 
-      - name: ⚙️ Configure rclone
+      - name: ☁ Upload to Yandex Object Storage
         run: |
-          echo "[yandex]" > rclone.conf
-          echo "type = s3" >> rclone.conf
-          echo "provider = Yandex" >> rclone.conf
-          echo "access_key_id = ${{ secrets.YANDEX_ACCESS_KEY }}" >> rclone.conf
-          echo "secret_access_key = ${{ secrets.YANDEX_SECRET_KEY }}" >> rclone.conf
-          echo "endpoint = https://storage.yandexcloud.net" >> rclone.conf
-
-      - name: 📤 Upload to Yandex Object Storage
-        run: |
-          echo "📤 Загрузка в бакет ${{ secrets.YANDEX_BUCKET_NAME }}"
+          echo "🚚 Загрузка в бакет ${{ secrets.YANDEX_BUCKET_NAME }}"
           rclone --config=rclone.conf sync ./dist yandex:${{ secrets.YANDEX_BUCKET_NAME }} --progress
