🔥 Финальный CI: Vite + deploy в Yandex Object Storage

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📦 Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: 🛠 Build project
-        run: npm run build
+        run: npx vite build
 
       - name: 📥 Install rclone
         run: curl https://rclone.org/install.sh | sudo bash
